mixer has less width

--- a/index.html
+++ b/index.html
@@ -222,13 +222,30 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+      "
+    >
       <div>
         Join the project on
         <a href="https://github.com/innermost47/terminux" target="_blank"
           >github</a
         >
         to clone it and participate !
+      </div>
+      <span style="color: rgba(255, 255, 255, 0.4)">|</span>
+      <div>
+        <a
+          href="https://legals.anthony-charretier.fr/"
+          style="color: #fff; text-decoration: none; font-weight: normal"
+        >
+          Legal Notice
+        </a>
       </div>
     </footer>
 
